--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,34 @@
-/*Base colors*/
-:root {
-    red: #d9ee19;
-    white: #DDDDDE;
-    darkgrey: #444444;
-    lightgrey: #8C8C8D;
-    black: #070708; 
-}
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+/*Main colors*/
+:root {
+    Yellow: FFE81F;
+    white: #DDDDDE;
+    black: #070708; 
+}
+
+
+
 body {
     background-color: #8C8C8D;
     font-family: 'Merriweather', serif;
 }
+
+/* Devider Line */
+hr {
+    border: 10px solid FFE81F;
+    border-radius: 5px;
+  }
+
+  .container {
+    padding: 0 2rem 1rem 2rem;
+    width: 400px;
+    height: 500px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
