--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,11 +38,14 @@ hr {
   .logo {
     height: 50%;
     width: 50%;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    
   }
 
   .main-header {
-    font-size: 30px;
-    margin-top: 0.5em;
+    font-size: 25px;
+    margin-top: 1em;
     text-align: center;
     color: yellow
   }
@@ -64,21 +67,21 @@ hr {
     background-color: yellow;
   }
 
-  /* Buttons */
+  /* list */
   .buttons {
     display: flex;
     flex-direction: column;
   }
 
-  #btn0,
-  #btn1,
-  #btn2,
-  #btn3 {
+  ul li {
+    font-size: 15px;
+    font-family: inherit;
+
     font-size: 15px;
   padding: 0.8em;
   margin-top: 1em;
   border: 1px solid #444444;
   border-radius: 12px;
-  background-color: #DDDDDE;
-  color: var(--white);
+  background-color: black;
+  color: yellow;
   }
