--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,17 +6,8 @@
     box-sizing: border-box;
 }
 
-/*Main colors*/
-:root {
-    Yellow: Yellow;
-    white: #DDDDDE;
-    black: #070708; 
-}
-
-
-
 body {
-    background-color:black;
+    background-color: black;
     font-family: 'Poller One', cursive;
 }
 
@@ -24,64 +15,84 @@ body {
 hr {
     border: 10px solid FFE81F;
     border-radius: 5px;
-  }
+}
 
-  .container {
+.container {
     padding: 0 2rem 1rem 2rem;
     width: 400px;
     height: 500px;
     display: block;
     margin-left: auto;
     margin-right: auto;
-  }
+}
 
-  .logo {
+.logo {
     height: 50%;
     width: 50%;
     margin-top: 20px;
     margin-bottom: 10px;
-    
-  }
+    margin-left: 25%;
 
-  .main-header {
+}
+
+.main-header {
     font-size: 25px;
     margin-top: 1em;
     text-align: center;
     color: yellow
-  }
+}
 
-  #question {
+#question {
     font-size: 20px;
     text-align: center;
     margin-bottom: 1em;
     color: #444444;
-  }
+}
 
-  #score {
+#score {
     color: yellow;
     background-color: #070708;
-  }
+}
 
-  #incorrect {
+#incorrect {
     color: #070708;
     background-color: yellow;
-  }
+}
 
-  /* list */
-  .buttons {
+/* list */
+.buttons {
     display: flex;
     flex-direction: column;
-  }
+}
 
-  ul li {
+ul li {
     font-size: 15px;
     font-family: inherit;
 
     font-size: 15px;
-  padding: 0.8em;
-  margin-top: 1em;
-  border: 1px solid #444444;
-  border-radius: 12px;
-  background-color: black;
-  color: yellow;
-  }
+    padding: 0.8em;
+    margin-top: 1em;
+    border: 1px solid #444444;
+    border-radius: 12px;
+    background-color: black;
+    color: yellow;
+}
+
+/* cursor: pointer;
+  box-shadow: 0 0.4rem 0 #DDDDDE; */
+
+button {
+    background-color: #EB232A;
+    color: #DDDDDE;
+    border: none;
+    display: block;
+    width: 100%;
+    cursor: pointer;
+    font-size: 1rem;
+    font-family: inherit;
+    padding: 0.5;
+}
+
+button:hover {
+    background-color: #444444;
+}
