--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,29 +62,33 @@ hr {
 }
 
 /* list */
-.buttons {
+ul {
     display: flex;
     flex-direction: column;
+  }
+
+  ul li {
+  font-size: 15px;
+  font-family: inherit;
+  padding: 0.8em;
+  margin-top: 1em;
+  border: 1px solid #444444;
+  border-radius: 12px;
+  background-color: rgb(29, 29, 168);
+  color: rgb(29, 29, 168)8;
+  list-style: none;
+  text-align: left;
+  }
+
+  .option:hover {
+    background-image: none;
+    transition: transform 150ms;
+    transform: scale(1.05);
+    cursor: pointer;
 }
 
-ul li {
-    font-size: 15px;
-    font-family: inherit;
-
-    font-size: 15px;
-    padding: 0.8em;
-    margin-top: 1em;
-    border: 1px solid #444444;
-    border-radius: 12px;
-    background-color: black;
-    color: yellow;
-}
-
-/* cursor: pointer;
-  box-shadow: 0 0.4rem 0 #DDDDDE; */
-
-button {
-    background-color: yellow;
+  button {
+    background-color: rgb(29, 29, 168);
     color: #DDDDDE;
     border: none;
     display: block;
@@ -92,9 +96,44 @@ button {
     cursor: pointer;
     font-size: 1rem;
     font-family: inherit;
-    padding: 0.5;
-}
+    padding: 0.5rem;
+  }
 
-button:hover {
+  button:hover {
     background-color: #444444;
-}
+  }
+
+  #submit{
+
+    padding:0,2rem;
+    background-color: #070708;
+    color: yellow;
+    margin-bottom: 3rem;
+    text-align: center;
+  }
+
+  #submit:hover{
+    background-color: rgb(29, 29, 168);
+  }
+
+  .score-area{
+    display: flex;
+    justify-content: center;
+    text-decoration: solid;
+    color: #070708;
+  }
+
+  /* High Score page */
+  #finalScore{
+    display: flex;
+    justify-content: center;
+    text-decoration: solid;
+    color: #070708;
+  }
+
+  .btn{
+    display: flex;
+    justify-content: center;
+    text-decoration: solid;
+    color: #070708;
+  }
