--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,8 +47,9 @@ hr {
 #question {
     font-size: 20px;
     text-align: center;
+    margin-top: 1em;
     margin-bottom: 1em;
-    color: #444444;
+    color: #d1d35d;
 }
 
 #score {
@@ -65,29 +66,29 @@ hr {
 ul {
     display: flex;
     flex-direction: column;
-  }
+}
 
-  ul li {
-  font-size: 15px;
-  font-family: inherit;
-  padding: 0.8em;
-  margin-top: 1em;
-  border: 1px solid #444444;
-  border-radius: 12px;
-  background-color: rgb(29, 29, 168);
-  color: rgb(29, 29, 168)8;
-  list-style: none;
-  text-align: left;
-  }
+ul li {
+    font-size: 15px;
+    font-family: inherit;
+    padding: 0.8em;
+    margin-top: 1em;
+    border: 1px solid #444444;
+    border-radius: 12px;
+    background-color: rgb(29, 29, 168);
+    color: #d1d35d;
+    list-style: none;
+    text-align: left;
+}
 
-  .option:hover {
+.option:hover {
     background-image: none;
     transition: transform 150ms;
     transform: scale(1.05);
     cursor: pointer;
 }
 
-  button {
+button {
     background-color: rgb(29, 29, 168);
     color: #DDDDDE;
     border: none;
@@ -97,43 +98,43 @@ ul {
     font-size: 1rem;
     font-family: inherit;
     padding: 0.5rem;
-  }
+}
 
-  button:hover {
+button:hover {
     background-color: #444444;
-  }
+}
 
-  #submit{
+#submit {
 
-    padding:0,2rem;
+    padding: 0, 2rem;
     background-color: #070708;
     color: yellow;
     margin-bottom: 3rem;
     text-align: center;
-  }
+}
 
-  #submit:hover{
+#submit:hover {
     background-color: rgb(29, 29, 168);
-  }
+}
 
-  .score-area{
+.score-area {
     display: flex;
     justify-content: center;
     text-decoration: solid;
     color: #070708;
-  }
+}
 
-  /* High Score page */
-  #finalScore{
+/* High Score page */
+#finalScore {
     display: flex;
     justify-content: center;
     text-decoration: solid;
     color: #070708;
-  }
+}
 
-  .btn{
+.btn {
     display: flex;
     justify-content: center;
     text-decoration: solid;
     color: #070708;
-  }
+}
