--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,8 @@ hr {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    color: yellow;
+    margin-top: 5px;
 }
 
 .logo {
@@ -110,11 +112,10 @@ button:hover {
     font-size: 15px;
     font-family: inherit;
     padding: 0.3em;
-    margin-top: 5%;
     border: 1px;
     border-radius: 1px;
     text-align: center;
-    margin-left: 10%;
+    margin-top: 10px;
 
 }
 
@@ -127,15 +128,17 @@ button:hover {
     justify-content: center;
     text-decoration: solid;
     color: yellow;
+    margin-top: 5px;
 }
 
 /* High Score page */
 .score-area {
     display: flex;
-justify-content: center;
-text-decoration: solid;
-color: yellow;
-background-color: #070708;}
+    justify-content: center;
+    text-decoration: solid;
+    color: yellow;
+    background-color: #070708;
+}
 
 
 #finalScore {
@@ -143,8 +146,7 @@ background-color: #070708;}
     justify-content: center;
     text-decoration: solid;
     color: yellow;
-    background-color: blue;
-
+    background-color: black;
 }
 
 .btn {
@@ -154,5 +156,3 @@ background-color: #070708;}
     color: yellow;
 
 }
-
-/*media screens up to 350px*/
