--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ hr {
 
 .main-header {
     font-size: 25px;
-    margin-top: 1em;
+    margin-top: 40%;
     text-align: center;
     color: yellow
 }
